added cell at top

--- a/ml_microcontroller_complete.ipynb
+++ b/ml_microcontroller_complete.ipynb
@@ -41,7 +41,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "id": "54d2f0c4-da6b-4e4c-9edf-86aa21b5dac9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n\\n* requirements.txt\\n\\n'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# REQUIRED FILES\n",
+    "'''\n",
+    "\n",
+    "* requirements.txt\n",
+    "\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "38af29a0-e6d6-454e-a8ee-dd702d7d7a55",
    "metadata": {},
    "outputs": [
@@ -118,10 +144,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "imports",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/joshnelson/anaconda3/lib/python3.11/site-packages/pandas/core/arrays/masked.py:61: UserWarning: Pandas requires version '1.3.6' or newer of 'bottleneck' (version '1.3.5' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
